option('cairo', type: 'boolean', value : false,
  description: 'Use cairo for tests'
)

option('doctool', type: 'boolean', value : false,
  description: 'Install g-ir-doc-tool'
)

option('glib-src-dir', type: 'string',
  description: 'Source directory for glib - needed to add docs to gir'
)

option('gtk-doc', type: 'boolean', value: false,
  description: 'Build and install documentation'
)

option('cairo-libname', type: 'string',
  description: 'Custom name for the cairo-gobject library name'
)

option('python', type: 'string', value: 'python3',
  description: 'Path or name of the Python interpreter to build for'
)

option('gir-dir-prefix', type: 'string',
  description: 'Intermediate prefix for gir installation under ${prefix}'
)
